添加一个div标签

--- a/text.html
+++ b/text.html
@@ -7,5 +7,6 @@
   <body>
          <div>git is a version control system</div>
          <div>git is free saflware</div>
+         <div>你好</div>
   </body>
 </html>
