删除增加标签

--- a/text.html
+++ b/text.html
@@ -12,7 +12,7 @@
             <li>1</li>
             <li>2</li>
             <li>3</li>
-            <li>4</li>
          </ul>
+         <div>结局</div>
   </body>
 </html>
